package store_api.human;

public class Buyer extends People {
    public Buyer(String surname, String name, String patronymic) {
        super(surname, name, patronymic);
    }
}
